[tool.poetry]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = ["Magomedaliev Alihan <ammagomeda@mts.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
fabric = "^3.2.2"
pydantic-settings = "^2.9.1"
faker = "^37.1.0"
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
psycopg2 = "^2.9.10"
redis = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
